--- a/SpendSense/Dashboard/index.html
+++ b/SpendSense/Dashboard/index.html
@@ -43,6 +43,8 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <!-- Include Chart.js CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   </head>
 
   <body>
@@ -59,7 +61,9 @@
           <div class="card shadow-sm">
             <h5 class="card-title">Balance</h5>
             <div class="card-body">
-              <p class="card-text" id="networth">Your total net worth will be displayed here.</p>
+              <p class="card-text" id="networth">
+                Your total net worth will be displayed here.
+              </p>
             </div>
           </div>
         </div>
@@ -81,7 +85,9 @@
           <div class="card shadow-sm">
             <h5 class="card-title">Debts</h5>
             <div class="card-body">
-              <p class="card-text" id="debts">Your total debts will be displayed here.</p>
+              <p class="card-text" id="debts">
+                Your total debts will be displayed here.
+              </p>
             </div>
           </div>
         </div>
@@ -97,6 +103,9 @@
             </div>
           </div>
         </div>
+
+        <canvas id="financialChart" width="400" height="200"></canvas>
+        <canvas id="debtChart" width="400" height="200"></canvas>
       </div>
     </div>
   </body>
