--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 
   <body class="d-flex flex-column min-vh-100">
     <!-- Navbar -->
+     <main class="flex-fill">
     <nav class="navbar navbar-expand-lg navbar-dark py-3">
       <div class="container">
         <a class="navbar-brand" href="../index.html">
@@ -162,6 +163,7 @@
           </div>
         </div>
       </div>
+      </main>
 
     <!-- Footer -->
     <footer class="text-white text-center py-3">
