--- a/SpendSense/Dashboard/index.html
+++ b/SpendSense/Dashboard/index.html
@@ -104,8 +104,8 @@
           </div>
         </div>
 
-        <canvas id="financialChart" width="400" height="200"></canvas>
-        <canvas id="debtChart" width="400" height="200"></canvas>
+        <!-- <canvas id="financialChart" width="400" height="200"></canvas>
+        <canvas id="debtChart" width="400" height="200"></canvas> -->
       </div>
     </div>
   </body>
