--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
               <a class="nav-link text-white" href="../index.html">FAQs</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="../Login/index.html">
+              <a class="nav-link text-white" href="./Login/index.html">
                 <button class="btn btn-login">
                   Login
                 </button>
