--- a/Login/index.html
+++ b/Login/index.html
@@ -29,10 +29,37 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   </head>
   <body class="d-flex flex-column justify-content-center align-items-center">
-    <h1 class="text-center">$pend$ense</h1>
+    <div class="container-fluid py-2">
+      <div class="row align-items-center">
+        <!-- Back Button (Left) -->
+        <div class="col-2 text-start">
+          <a
+            href="../index.html"
+            class="text-white text-decoration-none"
+          >
+            <i class="bi bi-arrow-left"></i>
+            Home page
+          </a>
+        </div>
+
+        <!-- Center Content -->
+        <div class="col-8 d-flex justify-content-center align-items-center">
+          <img
+            class="logo"
+            src="../../img/SpendSense.png"
+            width="50"
+            height="50"
+          />
+          <h1 class="text-white ms-2 mb-0">$pend$ense</h1>
+        </div>
+
+        <!-- Spacer Column (Right) -->
+        <div class="col-2"></div>
+      </div>
+    </div>
     <main class="form-signin w-100 m-auto">
       <form>
-        <h1 class="h3 mb-3 fw-normal text-center">Please login</h1>
+        <h1 class="h3 mb-3 fw-normal text-center text-white">Please login</h1>
         <div class="form-floating">
           <input
             type="email"
@@ -61,9 +88,9 @@
             <i class="bi bi-eye"></i>
           </button>
         </div>
-        <button class="btn text-white w-100 py-2" id="loginBtn" type="submit">Login</button>
+        <button class="btn w-100 py-2" id="loginBtn" type="submit">Login</button>
       </form>
-      <button class="btn text-white w-100 mt-2" id="signupBtn">Create an Account</button>
+      <button class="btn w-100 mt-2" id="signupBtn">Create an Account</button>
     </main>
   </body>
 </html>
