--- a/SpendSense/Dashboard/index.html
+++ b/SpendSense/Dashboard/index.html
@@ -52,7 +52,7 @@
     <div id="sidebar"></div>
 
     <div class="content p-4">
-      <h1 class="text-center" id="title">Welcome, User Name</h1>
+      <h1 class="text-center text-white" id="title">Welcome, User Name</h1>
 
       <!-- Grid for Dashboard Cards -->
       <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
