--- a/SpendSense/Transactions/index.html
+++ b/SpendSense/Transactions/index.html
@@ -49,7 +49,7 @@
     <div id="sidebar"></div>
 
     <div class="content">
-      <h2 class="text-center mb-4">Transactions</h2>
+      <h1 class="text-center text-white">Transactions</h1>
 
       <div class="row g-4">
         <!-- Income -->
