--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                   Our platform gives you insights to help you save money and
                   make smarter financial decisions.
                 </p>
-                <a href="#" class="btn btn-outline">Learn More</a>
+                <!-- <a href="#" class="btn btn-outline">Learn More</a> -->
               </div>
             </div>
           </div>
@@ -131,7 +131,7 @@
                   Get started in minutes! Sync your accounts, set your goals,
                   and start tracking your spending today.
                 </p>
-                <a href="#" class="btn btn-outline">Demo</a>
+                <!-- <a href="#" class="btn btn-outline">Demo</a> -->
               </div>
             </div>
           </div>
@@ -143,9 +143,9 @@
                   Tell us how much you want to spend, and SpendSense will
                   personalize your finances and do the math for you!
                 </p>
-                <a href="../Signup/index.html" class="btn btn-outline"
+                <!-- <a href="../Signup/index.html" class="btn btn-outline"
                   >Signup</a
-                >
+                > -->
               </div>
             </div>
           </div>
@@ -157,7 +157,7 @@
                   Buy our premium subscription for tailored insights and account
                   syncing compatability.
                 </p>
-                <a href="#" class="btn btn-outline">Pricing</a>
+                <!-- <a href="#" class="btn btn-outline">Pricing</a> -->
               </div>
             </div>
           </div>
