--- a/Login/index.html
+++ b/Login/index.html
@@ -46,7 +46,7 @@
         <div class="col-8 d-flex justify-content-center align-items-center">
           <img
             class="logo"
-            src="../../img/SpendSense.png"
+            src="./../img/SpendSense.png"
             width="50"
             height="50"
           />
