--- a/Signup/index.html
+++ b/Signup/index.html
@@ -55,7 +55,7 @@
         <div class="col-8 d-flex justify-content-center align-items-center">
           <img
             class="logo"
-            src="../../img/SpendSense.png"
+            src="./../img/SpendSense.png"
             width="50"
             height="50"
           />
