--- a/SpendSense/Transactions/index.html
+++ b/SpendSense/Transactions/index.html
@@ -49,6 +49,7 @@
     <div id="sidebar"></div>
 
     <div class="content">
+      <div id="alert-container" class="position-fixed top-0 end-0 p-2" style="z-index: 1050;"></div>
       <h1 class="text-center text-white">Transactions</h1>
 
       <div class="row g-4">
