--- a/SpendSense/Transactions/index.html
+++ b/SpendSense/Transactions/index.html
@@ -49,7 +49,7 @@
     <div id="sidebar"></div>
 
     <div class="content">
-      <div id="alert-container" class="position-fixed top-0 end-0 p-2" style="z-index: 1050;"></div>
+      <div id="alert-container" class="position-fixed top-0 end-0 p-2" style="z-index: 1060;"></div>
       <h1 class="text-center text-white">Transactions</h1>
 
       <div class="row g-4">
@@ -211,11 +211,11 @@
                 <table class="table table-striped">
                   <thead>
                     <tr>
-                      <th>Date</th>
-                      <th>Type</th>
-                      <th>Category/Source</th>
-                      <th>Amount</th>
-                      <th>Action</th>
+                      <th class="text-center">Date</th>
+                      <th class="text-center">Type</th>
+                      <th class="text-center">Category/Source</th>
+                      <th class="text-center">Amount</th>
+                      <th class="text-center">Action</th>
                     </tr>
                   </thead>
                   <tbody id="transaction-history"></tbody>
