added new alerts

--- a/Login/index.html
+++ b/Login/index.html
@@ -29,6 +29,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   </head>
   <body class="d-flex flex-column justify-content-center align-items-center">
+    <div id="alert-container" class="position-fixed top-0 end-0 p-2" style="z-index: 1060;"></div>
     <div class="container-fluid py-2">
       <div class="row align-items-center">
         <!-- Back Button (Left) -->
