updated the payment, debt, and added new alerts

--- a/SpendSense/Dashboard/index.html
+++ b/SpendSense/Dashboard/index.html
@@ -52,6 +52,7 @@
     <div id="sidebar"></div>
 
     <div class="content p-4">
+      <div id="alert-container" class="position-fixed top-0 end-0 p-2" style="z-index: 1060;"></div>
       <h1 class="text-center text-white" id="title">Welcome, User Name</h1>
 
       <!-- Grid for Dashboard Cards -->
