started working on the profile

--- a/SpendSense/Sidebar/index.html
+++ b/SpendSense/Sidebar/index.html
@@ -75,17 +75,14 @@
           data-bs-toggle="dropdown"
           aria-expanded="false"
         >
-          <span class="icon">
-            <i class="bi bi-gear"></i>
-          </span>
+          <span class="icon"><i class="bi bi-gear"></i></span>
           <strong class="settings text-white">User</strong>
         </a>
         <ul class="dropdown-menu text-small shadow">
-          <!-- <li><a class="dropdown-item" href="#">Settings</a></li>
-        <li><a class="dropdown-item" href="#">Profile</a></li>
-        <li>
-          <hr class="dropdown-divider" />
-        </li> -->
+          <li>
+            <button class="dropdown-item" id="profileBtn">Profile</button>
+          </li>
+          <li><hr class="dropdown-divider" /></li>
           <li>
             <button class="dropdown-item" id="signoutBtn">Sign out</button>
           </li>
