--- a/SpendSense/Sidebar/index.html
+++ b/SpendSense/Sidebar/index.html
@@ -3,11 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css"
+    />
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script defer src="script.js"></script>
   </head>
 
   <body>
     <div class="sidebar d-flex flex-column flex-shrink-0 p-3" id="sidebar">
+      <div id="alert-container" class="position-fixed top-0 end-0 p-2" style="z-index: 1060;"></div>
       <div class="d-flex align-items-center">
         <img
           class="logo"
