--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <li class="nav-item">
               <a class="nav-link text-white" href="../index.html">Home</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link text-white" href="../index.html">About Us</a>
             </li>
             <li class="nav-item">
@@ -80,7 +80,7 @@
             </li>
             <li class="nav-item">
               <a class="nav-link text-white" href="../index.html">FAQs</a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link text-white" href="./Login/index.html">
                 <button class="btn btn-login">
