rm home from nav

--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
           <ul
             class="navbar-nav ms-auto d-flex justify-content-center align-items-center"
           >
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link text-white" href="../index.html">Home</a>
-            </li>
+            </li> -->
             <!-- <li class="nav-item">
               <a class="nav-link text-white" href="../index.html">About Us</a>
             </li>
